--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "bootstrap": "^3.3.7",
-    "typed.js": "^1.1.4"
+    "typed.js": "^1.1.4",
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
