--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cardoso.cc",
   "version": "1.0.0",
-  "description": "Personal website Tiago Cardoso - Product Designer ",
+  "description": "Personal splash page Tiago Cardoso - Product Designer ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.17.3",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-clean-css": "^2.0.13",
