--- a/dploy.yaml
+++ b/dploy.yaml
@@ -6,7 +6,7 @@ dev:
     privateKey: /Users/elcardoson/BoxSync/ServerAWS/elgrandcardoson.pem
     check: true
     path:
-        local: /deploy/
+        local: deploy/
         remote: /var/www/vhosts/cardoso.cc/dev/
 
 stage:
@@ -28,5 +28,5 @@ live:
     privateKey: /Users/elcardoson/BoxSync/ServerAWS/elgrandcardoson.pem
     check: true
     path:
-        local: /deploy/
+        local: deploy/
         remote: /var/www/vhosts/cardoso.cc/
